syntax = "proto3";

package broadcast;

option go_package = "sidecarauth/broadcaster/protobuff/oauth_token";

// Message to represent the OAuth token response
message OAuthTokenResponse {
  string token_type = 1;
  string access_token = 2;
  int64 issued_at = 3;
  int32 expires_in = 4;
  string scope = 5;
}
